chore: fix post-terms alignment not taking effect

--- a/assets/css/src/blocks/_post-terms.scss
+++ b/assets/css/src/blocks/_post-terms.scss
@@ -14,4 +14,13 @@
       display: none;
     }
   }
+
+
+  &.has-text-align-center {
+    justify-content: center;
+  }
+
+  &.has-text-align-right {
+    justify-content: flex-end;
+  }
 }
